[package]
name = "taskforge"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.21.0"  # egui framework
chrono = "0.4.23"  # Date and time handling
notify-rust = "4.8.0"  # Optional: For desktop notifications